# rapidcheck-experiment

./: CMakeLists.txt  Makefile
source/: CMakeLists.txt  gmock_example.cc  gtest_example.cc  main.cc  mock-turtle.h  painter.h  rapidcheck_gmock_example.cc  rapidcheck_gtest_example.cc  turtle.h
test/: CMakeLists.txt  gtest_example.cc  mock-turtle.h  rapidcheck_gmock_example.cc
